# Cloud-recognition

./: Makefile  cloud-recognition.cpp  config.txt  recent_changes.diff
inc/: addition.h  base.h  convert.h  detection.h  files.h  pic.h  readhdf.h  structures.h
plugin/: CMakeLists.txt  Makefile  cloudrecognitionplugin.pro  interface.cpp  interface.h  moc_qgiscloudrecognitionplugin.cpp  moc_qgispointconverterplugin.cpp  qgiscloudrecognitionplugin.cpp  qgiscloudrecognitionplugin.h  qgscloudrecognitionbase.ui  ui_qgscloudrecognitionbase.h
src/: addition.cpp  base.cpp  convert.cpp  detection.cpp  files.cpp  pic.cpp  readhdf.cpp
